# PyAxols

./: README.md  __init__.py  eu-countries.json  example.ipynb  example.py  pyproject.toml  report_2018-2019.csv  requirements.txt  sandbox.py  seq.py  setup.py  table.py  test.py  utils.py
aio/: __init__.py  csv.py  json.py  xml.py
atypes/: __init__.py  seq.py  table.py
io/: csv.py
pyaxols/: __init__.py  utils.py
pyaxols/aio/: __init__.py  csv.py  json.py  xml.py
pyaxols/atypes/: __init__.py  seq.py  table.py
